--- a/assets/css/source/base/_base.scss
+++ b/assets/css/source/base/_base.scss
@@ -1,3 +1,9 @@
 html{
     font-family: 'Roboto';
 }
+body{
+    background-image: url(/assets/img/8150248.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
