--- a/assets/css/source/base/_color-palette.scss
+++ b/assets/css/source/base/_color-palette.scss
@@ -3,3 +3,23 @@ $navy-deep: #393053;
 $navy-soft: #443C68;
 $navy-light: #635985;
 $off-white: #f0f0f0;
+$white: #ffffff;
+
+.navy-darker{
+    background-color: $navy-darker;
+}
+.navy-deep{
+    background-color: $navy-deep;
+}
+.navy-soft{
+    background-color: $navy-soft;
+}
+.navy-light{
+    background-color: $navy-light;
+}
+.off-white{
+    background-color: $off-white;
+}
+.white{
+    background-color: $white;
+}
