--- a/assets/css/source/input/input.scss
+++ b/assets/css/source/input/input.scss
@@ -1,4 +1,5 @@
 @import "../base/reset-meyer";
+@import "../base/color-palette";
 @import "../base/fonts";
 @import "../base/typography";
 @import "../base/base";
