--- a/assets/css/source/layout/_home.scss
+++ b/assets/css/source/layout/_home.scss
@@ -1,6 +1,83 @@
 main{
   height: 40rem;
-  background-color: f0f0f0;
-  background-repeat: no-repeat;
-  border: solid 2px red;
+  // border: solid 2px red;
+  backdrop-filter: blur(10px);
 }
+.home-about{
+
+}
+.home-about__content{
+
+}
+.tittle-big::after{
+  content: '';
+  position: absolute;
+  margin-top: 1.5rem;
+  height: 5px;
+  width: 3rem;
+  background: #393053;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 5px;
+}
+.home-about__main-wrapper{
+  
+}
+.contact__form-input {
+  padding: 2rem;
+  width: 100%;
+  border: 1px solid #ebebeb;
+  font-size: 1.6rem;
+  letter-spacing: 0;
+  background: #f0f0f0;
+  border-radius: 5px;
+  font-weight: 600;
+}
+.contact__form-label {
+  font-size: 1.4rem;
+  letter-spacing: 1px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  display: block;
+  text-align: left;
+}
+
+@media (max-width: 640px){
+  .contact__form-input{
+    padding: 1rem;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 1024px){
+  .home-about__main-wrapper{
+    flex-direction: column;
+  }
+}
+@media (max-width: 640px){
+  .home-about, .home-expertise{
+    padding: 0 2rem;
+  }
+}
+@media (max-width: 640px){
+  .home-about__main-wrapper{
+    flex-direction: column;
+    gap: 4rem;
+  }
+}
+@media (max-width: 640px){
+  .home-about__content p{
+    //padding: 1rem 0rem;
+  }
+}
+@media (min-width: 640px){
+  .my-20{
+    margin: 8rem 0;
+  }
+ }
+ .come-front-menu{
+  z-index: 1;
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  min-width: 100%;
+ }
